Add tags and promise tags to schedule
