# api/schedules-openapi.yml
@@ -5,6 +5,8 @@ info:
 paths:
   /schedules:
     post:
+      tags:
+        - Schedules
       summary: Create a new schedule
       requestBody:
         content:
@@ -19,10 +21,14 @@ paths:
               properties:
                 id:
                   type: string
-                desc:
+                description:
                   type: string
                 cron:
                   type: string
+                tags:
+                  type: object
+                  additionalProperties:
+                    type: string
                 promiseId:
                   type: string
                 promiseTimeout:
@@ -30,6 +36,10 @@ paths:
                   format: int64
                 promiseParam:
                   $ref: "#/components/schemas/PromiseValue"
+                promiseTags:
+                  type: object
+                  additionalProperties:
+                    type: string
         required: true
       responses:
         "200":
@@ -39,8 +49,62 @@ paths:
               schema:
                 $ref: "#/components/schemas/Schedule"
 
+    get:
+      tags:
+        - Schedules
+      summary: Search schedules
+      operationId: searchSchedules
+      parameters:
+        - name: id
+          in: query
+          description: |
+            Search schedules for matching IDs, can include wildcards.
+
+            For example:
+            - "foo/*" matches all IDs starting with "foo/"
+            - "*/bar" matches all IDs starting with "bar/"
+            - "foo/*/bar" matches all IDs starting with "foo/" and ending with "/bar"
+          schema:
+            type: string
+        - name: tags
+          in: query
+          style: deepObject
+          explode: true
+          schema:
+            type: object
+            additionalProperties:
+              type: string
+        - name: limit
+          in: query
+          description: Number of results
+          schema:
+            type: integer
+        - name: cursor
+          in: query
+          description: Cursor for pagination
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  cursor:
+                    type: string
+                  schedules:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Schedule"
+        400:
+          description: Invalid request
+
   /schedules/{id}:
     get:
+      tags:
+        - Schedules
       summary: Get a schedule
       parameters:
         - in: path
@@ -59,6 +123,8 @@ paths:
           description: Schedule not found
 
     delete:
+      tags:
+        - Schedules
       summary: Delete a schedule
       parameters:
         - in: path
@@ -78,18 +144,24 @@ components:
       type: object
       required:
         - id
-        - desc
+        - description
         - cron
+        - tags
         - promiseId
         - promiseTimeout
         - promiseParam
+        - promiseTags
       properties:
         id:
           type: string
-        desc:
+        description:
           type: string
         cron:
           type: string
+        tags:
+          type: object
+          additionalProperties:
+            type: string
         promiseId:
           type: string
         promiseTimeout:
@@ -97,6 +169,10 @@ components:
           format: int64
         promiseParam:
           $ref: "#/components/schemas/PromiseValue"
+        promiseTags:
+          type: object
+          additionalProperties:
+            type: string
         lastRunTime:
           type: integer
           readOnly: true
@@ -115,6 +191,8 @@ components:
 
     PromiseValue:
       type: object
+      required:
+        - headers
       properties:
         data:
           type: string
